# MPO-multilingual-prompt-optimizer

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  MEDIUM_PRIORITY_COMPLETION.md  README.md  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt
config/: languages.yaml  models.yaml  prompts.yaml
docs/: LMSTUDIO_SETUP.md  api.md  architecture.md  cultural_rationale.md  examples.md  file_structure.md  getting_started.md  metrics_guide.md
notebooks/: demo_walkthrough.ipynb
prompts/templates/: business_email.txt  creative_story.txt  email_marketing.txt  in_app_message.txt  instructional_guide.txt  persuasive_pitch.txt  product_copy.txt  push_notification.txt  social_media_ad.txt  technical_explanation.txt
reports/: business_email_report.html
src/mpo/: __init__.py  constants.py
src/mpo/adapters/: __init__.py  de_adapter.py  en_adapter.py  es_adapter.py  factory.py
src/mpo/cli/: main.py
src/mpo/core/: adaptation_config.py  adapter.py  evaluator.py  prompt.py
src/mpo/metrics/: __init__.py  qualitative.py  quantitative.py
src/mpo/providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
src/mpo/reports/: __init__.py  html_generator.py
src/mpo/storage/: __init__.py  cache_manager.py  experiment_tracker.py
tests/integration/: test_persuasive_pitch_german_casual.py
tests/unit/: test_adapters.py
