[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilingual-prompt-optimizer"
version = "1.0.0"
description = "Cultural adaptation of LLM prompts across languages for measurable performance improvements"
authors = [
    {name = "Monica Guimaraes", email = "moniguimal@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "llm",
    "prompt-engineering",
    "multilingual",
    "cultural-adaptation",
    "nlp",
    "internationalization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "textstat>=0.7.3",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]

ui = [
    "gradio>=4.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]

all = [
    "multilingual-prompt-optimizer[dev,ui]",
]

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/multilingual-prompt-optimizer"
Documentation = "https://github.com/YOUR-USERNAME/multilingual-prompt-optimizer/blob/main/docs/"
Repository = "https://github.com/YOUR-USERNAME/multilingual-prompt-optimizer"
Issues = "https://github.com/YOUR-USERNAME/multilingual-prompt-optimizer/issues"

[project.scripts]
mpo = "mpo.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mpo*"]

[tool.setuptools.package-data]
mpo = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/mpo --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
